adding event for navbar list

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <div class="container">
         <img class="logo" src="images/logo.png" alt="" />
         <div class="links">
-          <span class="icon">
+          <span class="icon" id="bar_icon">
             <span></span>
             <span></span>
             <span></span>
           </span>
-          <ul>
+          <ul id="list_links">
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#About">About</a></li>
@@ -239,5 +239,7 @@
     <!-- End-Footer -->
 
     <script src="js/all.min.js"></script>
+    <!-- Main js -->
+    <script src="js/main.js"></script>
   </body>
 </html>
